webook/k8s-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-mysql
spec:
  selector:
    app: webook-mysql
  ports:
    - protocol: TCP
      # k8s集群内部使用的端口号
      port: 3308
      # 映射的目标端口号
      targetPort: 3306
      # NodePort模式时，外界进行访问的端口号
      nodePort: 30002
  type: NodePort
