webook/k8s-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webook-redis
spec:
  selector:
    app: webook-redis
  ports:
    - protocol: TCP
      # 内部使用的端口
      port: 6380
      targetPort: 6379
      # 供外部访问的端口
      nodePort: 30003
  type: NodePort
