webook/k8s-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
spec:
  # 指定ingressController是哪一个
  ingressClassName: nginx
  # 指定路由规则
  rules:
    # 当host是webook.com时，命中这条路由规则
    - host: webook.com
      http:
        paths:
          # 当请求路径的前缀是/时，将流量转到webook服务上
          - backend:
              service:
                name: webook
                port:
                  number: 81
            pathType: Prefix
            path: /
